--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Codejam Eldritch</title>
-        <script defer="defer" src="script.js"></script>
+        <script defer="defer" src="script.js" type="module"></script>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
