fix: fixed paths

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="root">
-            <div class="app" style="background-image: url('/assets/home.png');">
+            <div class="app" style="background-image: url('./assets/home.png');">
                 <div class="ancients-container">
                 </div>
                 <div class="difficulty-container">
